Test solve for gist text too large on mbl

--- a/src/utils/markdown.css
+++ b/src/utils/markdown.css
@@ -51,7 +51,7 @@ p {
 		display: none;
 	}
 }
-.gist .blob-code {
+.gist .blob-code td {
 	font-size: 12px;
 }
 
